# mlir-hs

./: mlir-hs.cabal
src/MLIR/: AST.hs  Native.hs
src/MLIR/Native/: Pass.hs
test/MLIR/: ASTSpec.hs
